# choices

./: .gitignore  README.md  vercel.json
contracts/prediction-market/: Cargo.toml
contracts/prediction-market/src/: errors.rs  lib.rs  test.rs  types.rs
contracts/prediction-market/test_snapshots/test/: test_buy_after_deadline_fails.1.json  test_buy_multiple_times.1.json  test_buy_no_shares.1.json  test_buy_nonexistent_market_fails.1.json  test_buy_yes_shares.1.json  test_buy_zero_amount_fails.1.json  test_claim_from_open_market_fails.1.json  test_claim_with_no_position.1.json  test_create_market.1.json  test_create_market_past_deadline_fails.1.json  test_create_multiple_markets.1.json  test_double_claim_fails.1.json  test_full_flow.1.json  test_initialize.1.json  test_initialize_twice_fails.1.json  test_no_winners_refund.1.json  test_proportional_payout.1.json  test_resolve_already_resolved_fails.1.json  test_resolve_before_deadline_fails.1.json  test_winner_takes_all.1.json
docs/: tech-stack.md
frontend/: .env  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  MarketCard.tsx  TickerBar.tsx  WalletButton.tsx
frontend/src/hooks/: useContract.ts  useWallet.tsx
frontend/src/lib/: stellar.ts
frontend/src/pages/: Admin.tsx  CreateMarket.tsx  Faucet.tsx  MarketDetail.tsx  Markets.tsx
scripts/: deploy.sh  setup.sh
